website/versioned_docs/version-1.3.0/tests/eidsca/EIDSCA.AM02.md
---
title: EIDSCA.AM02 - Authentication Method - Microsoft Authenticator - Allow use of Microsoft Authenticator OTP
slug: /tests/EIDSCA.AM02
sidebar_class_name: hidden
---

# Authentication Method - Microsoft Authenticator - Allow use of Microsoft Authenticator OTP

Defines if users can use the OTP code generated by the Authenticator App.

| | |
|-|-|
| **Name** | isSoftwareOathEnabled |
| **Control** | Authentication Method - Microsoft Authenticator |
| **Description** | Define configuration settings and users or groups that are enabled to use Authenticator App |
| **Severity** | High |

## How to fix

[Microsoft Learn - Enable OTP for Authenticator App](https://learn.microsoft.com/en-us/entra/identity/authentication/concept-authentication-methods-manage#authentication-methods-policy)

### Details of configuration item
| | |
|-|-|
| **Recommendation** | true |
| **Configuration** | policies/authenticationMethodsPolicy/authenticationMethodConfigurations('MicrosoftAuthenticator') |
| **Setting** | `isSoftwareOathEnabled` |
| **Recommended Value** | 'true' |
| **Default Value** | true |
| **Graph API Docs** | [microsoftAuthenticatorAuthenticationMethodConfiguration resource type - Microsoft Graph v1.0 - Microsoft Learn](https://learn.microsoft.com/en-us/graph/api/resources/microsoftauthenticatorauthenticationmethodconfiguration) |
| **Graph Explorer** | [Open in Graph Explorer](https://developer.microsoft.com/en-us/graph/graph-explorer?request=policies/authenticationMethodsPolicy/authenticationMethodConfigurations('MicrosoftAuthenticator')&method=GET&version=beta&GraphUrl=https://graph.microsoft.com) |



